[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "qhab"
version = "0.0.0"
authors = [
  { name = "Yujin Kang", email = "yjkang@snu.ac.kr" },
  ]
description = "python package for calculating the coefficient of thermal expansion via quasi-harmonic approximation and v-ZSISA"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "phonopy",
    # "phono3py",
    "pymatgen",
    "seekpath",
]
    # spglib

[project.scripts]
qhab = "qhab.main:main"

[tool.setuptools]
packages = [
    "qhab",
    "qhab.calculator",
    "qhab.structure",
    "qhab.phonon",
    "qhab.util",
]

[project.urls]
Homepage = "https://github.com/ywllnkang/qhaB"/
Issues = "https://github.com/ywllnkang/qhaB/issues"
